<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blackout_time"
                style="@style/Text"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/input_blackout_duration"
                    android:inputType="number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/input_alarm_range_start"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"/>
            </LinearLayout>
            <TextView
                android:paddingTop="30dp"
                android:text="@string/alarm_between"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"/>
            <TimePicker
                android:id="@+id/input_alarm_range_start"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:timePickerMode="spinner"
                android:nextFocusDown="@id/input_alarm_range_end"/>
            <TextView
                android:text="@string/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"/>
            <TimePicker
                android:id="@+id/input_alarm_range_end"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:timePickerMode="spinner"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_set_alarm"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:text="@string/set_alarm"
                style="@style/Button" />
            <TextView
                android:id="@+id/text_feedback_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/LargeText"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>